--- a/components/contact.html
+++ b/components/contact.html
@@ -44,8 +44,8 @@
                             </div>
                             <div class="info-content">
                                 <h4>Email</h4>
-                                <p>info@visioncare-optics.com</p>
-                                <p>appointments@visioncare-optics.com</p>
+                                <p>info@sangam-optics.com</p>
+                                <p>appointments@sangam-optics.com</p>
                             </div>
                         </div>
                         <div class="info-item">
@@ -214,7 +214,7 @@
                         <p>Speak directly with our team</p>
                     </div>
                 </a>
-                <a href="mailto:info@visioncare-optics.com" class="action-item">
+                <a href="mailto:info@sangam-optics.com" class="action-item">
                     <div class="action-icon">
                         <i class="fas fa-envelope"></i>
                     </div>
