--- a/components/testimonials.html
+++ b/components/testimonials.html
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="testimonial-content">
-                        <p>"After years of vision problems, VisionCare finally got my prescription right. The detailed eye exam caught issues my previous doctor missed. Their follow-up care is exceptional. Highly recommend to anyone!"</p>
+                        <p>"After years of vision problems, Sangam finally got my prescription right. The detailed eye exam caught issues my previous doctor missed. Their follow-up care is exceptional. Highly recommend to anyone!"</p>
                         <div class="testimonial-tags">
                             <span class="tag">Complex Prescription</span>
                             <span class="tag">Follow-up Care</span>
